# Modern-Expense-Tracker

./: .gitignore
backend/: Makefile  README.md  pyproject.toml
backend/alembic/: env.py  script.py.mako
backend/alembic/versions/: 0001_initial_schema.py  0002_remove_confidence.py  0003_simplify_transactions.py  0004_add_users_and_auth.py  0005_add_auth_otps.py
backend/scripts/: seed_transactions.py
backend/src/: app.py  config.py
backend/src/api/: routes.py
backend/src/api/v1/: auth.py  examples.py  filters.py  pagination.py  routes.py  schemas.py  sorting.py
backend/src/auth/: __init__.py  dependencies.py  security.py  service.py
backend/src/database/: __init__.py  connection.py
backend/src/email/: __init__.py  providers.py  service.py  types.py
backend/src/models/: __init__.py  auth_otp.py  auth_session.py  entry.py  enums.py  oauth_identity.py  transaction.py  types.py  user.py
backend/src/parser/: client.py  postprocess.py  prompts.py  schema.py  service.py
backend/src/services/: __init__.py  entry_service.py  fields.py  filtering.py  pagination.py  schemas.py  sorting.py  transaction_service.py
backend/src/utils/: helpers.py
backend/tests/: conftest.py  test_parser.py  test_routes.py  test_services.py
client/: App.tsx  app.config.js  app.json  package-lock.json  package.json
client/src/api/: authApi.ts  client.ts  config.ts  expenseApi.ts  index.ts  types.ts
client/src/components/: AppHeader.tsx  ChoiceChips.tsx  EditableTransactionCard.tsx  GhostButton.tsx  InputField.tsx  MultiSelectChips.tsx  PageHeader.tsx  PrimaryButton.tsx  (+4 more)
(+26 files in other folders)
